Adding the stb library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(rfs-2-images-project VERSION "0.1.0")
+project(rfs-2-images-project VERSION "0.1.0" LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BUILD_TYPE Release)
@@ -19,6 +19,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
 # set libraries
 # set(RECFUSION_PATH SETUP_THIS)
 set(CXXOPTS_PATH third-party/cxxopts)
+set(STB_PATH third-party/stb)
 
 add_subdirectory(${CXXOPTS_PATH})
 
@@ -28,3 +29,4 @@ link_directories(${RECFUSION_PATH}/lib)
 add_executable(rfs-2-images src/main.cpp src/main.cpp)
 
 target_link_libraries(rfs-2-images cxxopts) # RecFusion)
+target_include_directories(rfs-2-images PUBLIC ${STB_PATH}/)
