--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third-party/cxxopts"]
 	path = third-party/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "third-party/stb"]
+	path = third-party/stb
+	url = https://github.com/nothings/stb.git
