--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,16 +17,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
 # endif ()
 
 # set libraries
-# set(RECFUSION_PATH SETUP_THIS)
 set(CXXOPTS_PATH third-party/cxxopts)
 set(STB_PATH third-party/stb)
 
 add_subdirectory(${CXXOPTS_PATH})
 
-include_directories(${RECFUSION_PATH}/include)
-link_directories(${RECFUSION_PATH}/lib)
+add_executable(rfs-2-images src/main.cpp ${STB_PATH}/stb_image_write.h)
 
-add_executable(rfs-2-images src/main.cpp src/main.cpp)
-
-target_link_libraries(rfs-2-images cxxopts) # RecFusion)
-target_include_directories(rfs-2-images PUBLIC ${STB_PATH}/)
+target_link_libraries(rfs-2-images cxxopts RecFusion)
+target_include_directories(rfs-2-images PUBLIC ${STB_PATH}/ ${RECFUSION_PATH}/include)
+target_link_directories(rfs-2-images PUBLIC ${RECFUSION_PATH}/lib)
