--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third-party/stb"]
 	path = third-party/stb
 	url = https://github.com/nothings/stb.git
+[submodule "third-party/stb-16bit"]
+	path = third-party/stb-16bit
+	url = https://github.com/WearerOfShoes/stb.git
